// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Link renders correctly 1`] = `
<jest>
  <a
    class="ecl-tag"
    href="/example"
  >
    Link tag
  </a>
</jest>
`;

exports[`Tag Link renders correctly with an external link 1`] = `
<jest>
  <a
    class="ecl-tag"
    href="/example"
  >
    Link tag
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--2xs ecl-tag__icon ecl-tag__icon--external"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#external"
      />
    </svg>
  </a>
</jest>
`;

exports[`Tag Link renders correctly with extra attributes 1`] = `
<jest>
  <a
    class="ecl-tag"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    href="/example"
  >
    Link tag
  </a>
</jest>
`;

exports[`Tag Link renders correctly with extra class names 1`] = `
<jest>
  <a
    class="ecl-tag custom-class custom-class--test"
    href="/example"
  >
    Link tag
  </a>
</jest>
`;

exports[`Tag Removable renders correctly 1`] = `
<jest>
  <button
    aria-label="Dismiss"
    class="ecl-tag ecl-tag--removable"
    type="button"
  >
    Removable tag
    <span
      class="ecl-tag__icon"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#close-outline"
        />
      </svg>
    </span>
  </button>
</jest>
`;

exports[`Tag Set renders correctly 1`] = `
<jest>
  <div
    class="ecl-tag-set"
  >
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
  </div>
</jest>
`;

exports[`Tag Set renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-tag-set"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
  </div>
</jest>
`;

exports[`Tag Set renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-tag-set custom-class custom-class--test"
  >
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
    <button
      aria-label="Dismiss"
      class="ecl-tag ecl-tag--removable"
      type="button"
    >
      Removable tag
      <span
        class="ecl-tag__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#close-outline"
          />
        </svg>
      </span>
    </button>
    <a
      class="ecl-tag"
      href="/example"
    >
      Link tag
    </a>
  </div>
</jest>
`;
